--- a/RayLibStarterTemplate.vcxproj
+++ b/RayLibStarterTemplate.vcxproj
@@ -142,7 +142,21 @@
     <None Include="Makefile" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="src\Ball.cpp" />
+    <ClCompile Include="src\Blocks.cpp" />
     <ClCompile Include="src\main.cpp" />
+    <ClCompile Include="src\Paddle_1.cpp" />
+    <ClCompile Include="src\Paddle_2.cpp" />
+    <ClCompile Include="src\Paddle_CPU.cpp" />
+    <ClCompile Include="src\Window.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="src\Ball.h" />
+    <ClInclude Include="src\Blocks.h" />
+    <ClInclude Include="src\Paddle_1.h" />
+    <ClInclude Include="src\Paddle_2.h" />
+    <ClInclude Include="src\Paddle_CPU.h" />
+    <ClInclude Include="src\Window.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
